# cookiecutter-hypermodern-python

./: .gitignore  .pre-commit-config.yaml  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
docs/: guide.md
hooks/: post_gen_project.py
tests/: conftest.py  test_project_creation.py
{{cookiecutter.project_name}}/: .env  .flake8  .gitignore  .mergify.yml  .pre-commit-config.yaml  .sourcery.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  {% if cookiecutter.license == 'Apache-2.0' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'BSD-3' -%} LICENSE {%- endif %}  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE {%- endif %}
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: release.yml  tests.yml
{{cookiecutter.project_name}}/.run/: pytest in tests.run.xml
{{cookiecutter.project_name}}/docs/: conf.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  base_class.py  subclass.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/conf/: __init__.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_base_class.py  test_imports.py  test_main.py  test_subclass.py
