[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
documentation = "https://{{cookiecutter.project_name}}.readthedocs.io"
{% if cookiecutter.package_name != cookiecutter.project_name.replace('-', '_') -%}
packages = [
    { include = "{{cookiecutter.package_name}}", from = "src" },
]
{% endif -%}
classifiers = [
    "{{cookiecutter.development_status}}",
]

[tool.poetry.urls]
Changelog = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.0.1"
python-dotenv = "^1.0.0"
pandas = "^2.1.0"
loguru = "^0.7.0"
rich = "^13.7.0"
tqdm = "^4.66.2"
ujson = "^5.8.0"

# group: dev dependencies
# You can install optional groups by using the --with option:
#   poetry install --with dev
#   poetry install --without dev
# When used together, --without takes precedence over --with.
[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
autopep8 = "1.6.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = "^4.0.1,<5.0.0"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
nox-poetry = "^1.0.1"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pytest-mock = "^3.12.0"
pytest-randomly = "^3.12.0"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
nox = "^2022.1.7"
Faker = "^18.0.0"

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["src/{{cookiecutter.package_name}}", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3
filename = "*.py,*.pyx,*.pxd,*.pxi"
exclude = "**/docs/**, **/site-packages/**, **/.dvc/**, **/.git/**, **/.pytest_cache/**, **/notebooks/**, **/reports/**, **/.ipynb_checkpoints/**"

[tool.black]
line-length = 88
target-version = ["py39"]
exclude = "/.github/"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2
extend_skip = [".md", ".json"]
skip_glob = ["**/docs/**", "**/site-packages/**"]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
addopts = [
    "-rsxX --showlocals",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: determines whether the deployed build is stable or not (select with '-m \"smoke\"')",
    "debug: marks tests as actively under debugging (deselect with '-m \"not debug\"')",
]
norecursedirs = ".git/* .dvc/* build/* data/external/* data/interim/* data/processed/* data/raw/*"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
